<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/btnLR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="300dp">


        <EditText
            android:id="@+id/e1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Reminder_Prompt"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLL"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/schedule"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="Set Date/Time"
            android:onClick="showTimePickerDialog"/>
        <Button
            android:id="@+id/cancelButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:text="Cancel" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="save" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <CheckBox android:id="@+id/checkbox_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:layout_gravity="center"  />
        <CheckBox android:id="@+id/checkbox_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discord"
            android:layout_gravity="center" />
        <CheckBox android:id="@+id/checkbox_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simulatesend"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>