<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegisterPage">

    <RelativeLayout
        android:layout_width="278dp"
        android:layout_height="411dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="93dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/cardview_dark_background"
        android:background="@drawable/register">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="188dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="94dp"
            android:background="@android:color/white"
            android:hint="@string/prompt_email"
            android:textAlignment="textStart"
            
            
            android:gravity="start"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="35dp"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="188dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="147dp"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:textAlignment="textStart"
            
            
            android:gravity="start" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="188dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="43dp"
            android:layout_marginBottom="175dp"
            android:background="@android:color/white"
            android:hint="@string/prompt_password"
            android:textAlignment="textStart"
            
            
            android:gravity="start" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ContinueCview"
            android:layout_width="230dp"
            android:layout_height="33dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="116dp"
            app:cardBackgroundColor="#1847BC"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/continue_label"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="65dp"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/white"
             />

    </RelativeLayout>
</RelativeLayout>